Fix the polls results bar being truncated at certain resolutions

--- a/themes/default/css/index.css
+++ b/themes/default/css/index.css
@@ -4644,9 +4644,6 @@ dl.no_members {
 	.linktree .board_moderators {
 		display: none;
 	}
-	.statsbar .bar {
-		max-width: 12em;
-	}
 	.signature {
 		display: none;
 	}
